[package]
name = "mango-examples"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "mango_examples"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = "0.19.0"
solana-program = "^1.8.1"
anchor-spl = "0.19.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
mango = {path= "../../../mango-v3/program", features=["no-entrypoint"]}
mango-macro = { path = "../../../mango-v3/mango-macro" }
mango-common = { path = "../../../mango-v3/common" }
arrayref = "^0.3.6"
serde = "^1.0.118"
bs58 = "0.4.0"
bytemuck = "^1.7.2"
bincode = "^1.3.1"
fixed = { version = "=1.9.0", features = ["serde"] }
fixed-macro = "^1.1.1"
enumflags2 = "^0.6.4"
num_enum = "^0.5.1"
thiserror = "^1.0.24"
serum_dex = { version = "0.4.0", git = "https://github.com/blockworks-foundation/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }
static_assertions = "^1.1.0"
safe-transmute = "^0.11.1"
switchboard-program = "^0.1.52"


[dev-dependencies]
solana-sdk = "^1.8.1"
solana-program-test = "^1.8.1"
solana-logger = "^1.8.1"
tarpc = { version = "^0.26.2", features = ["full"] }
